# amd-gpu-stats-test

./: .gitmodules  CMakeLists.txt  build.sh  main.cpp
